# unity-mcp

./: .editorconfig  .gitignore  2026-02-09-implement-the-following-plan.txt  AGENTS.md  CHARACTERIZATION_TESTS_INDEX.md  CHARACTERIZATION_TEST_SUMMARY.md  CLAUDE.md  CLI_COMMANDS_BOILERPLATE_REFERENCE.md  DesignDocBeeTrapV2.md  IMPLEMENTATION_SUMMARY.md  MILESTONE_2_COMPLETE.md  ProposedTable.md  README-DEV.md  README-DOCKER.md  README-HEADLESS.md  README-PRODUCTION.md  README-VPS.md  README-zh.md  README.md  REFACTOR_PROGRESS.md  UNITY_LICENSE_INSTRUCTIONS.md  docker-compose.dev.yml  docker-compose.production.yml  get-unity-license.sh  k8s-local-test.yaml  k8s-unity-real.yaml  manifest.json  start-scene-builder.ps1  start-scene-builder.sh  system-prompt.md  test-local-docker.sh  test_prefab_stage_lookup.py  test_prefab_stage_mcp_calls.md  unity-mcp.mcpb  {%.disabled}
.claude/: OVERVIEW.md  mcp.json  settings.local.json
.github/: pull_request_template.md
.unity-credentials/: unity_password  unity_username
MCPForUnity/: README.md  package.json
MCPForUnity/Server~/: mcp_wrapper.py  pyproject.toml  wrapper.js
MCPForUnity/Server~/src/: main.py
MCPForUnity/Server~/src/core/: telemetry.py
MCPForUnity/Server~/src/services/tools/: __init__.py
Server/: CHARACTERIZATION_TEST_SUMMARY.md  DOCKER_OVERVIEW.md  Dockerfile  README.md  connection_pool.py  models.py  port_discovery.py  pyproject.toml  server.py  unity_connection.py
UnityMcpBridge/: package.json
anime-podcast/: .gitignore  README.md  netlify.toml  vercel.json
docker/: Dockerfile.ci  Dockerfile.demo  (+7 more)
(+1182 files in other folders)
